--- a/plugins/google-play-services/in-app-updates/install_error.html
+++ b/plugins/google-play-services/in-app-updates/install_error.html
@@ -238,7 +238,7 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            The ReviewError struct is designed to simplify handling any errors encountered when attempting to launch an in-app review.
+                            The InstallError struct is designed to simplify handling any errors encountered when managing In App Updates.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
                             The struct contains a general error code that the google play library categories the issue as and a message describing what may have happened.
@@ -246,7 +246,7 @@
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">FReviewError</h1>
+                    <h1 class="h3 text-white-shadow">FInstallError</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; overflow-x: auto;">
                     <table class="table table-striped table-bordered table-documentation"
@@ -262,7 +262,7 @@
                             <tr>
                                 <td>Code</td>
                                 <td>
-                                    <a href="enumerations.html">EReviewErrorCode</a>
+                                    <a href="enumerations.html">EInstallErrorCode</a>
                                 </td>
                                 <td style="min-width: 300px">
                                     The type of error encountered.
