--- a/plugins/google-play-services/in-app-updates/flexible_listener.html
+++ b/plugins/google-play-services/in-app-updates/flexible_listener.html
@@ -237,15 +237,11 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            This is an asynchronous function which launches the in-app review flow.
-                            You must wait until the user has completed the in-app review process before your app continues its normal flow.
-                        </p>
-                        <p class="content">
-                            Once the asynchronous operation has completed, one of two delegates will be called to handle
-                            the success and failure situations.
+                            This is an function which sets up a listener to retrieve events about a <a href="enumerations.html">Flexible</a> update.
+                            The delegate will only be called with <a href="install_state.html">Install State</a> information during a flexible update.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            <span style="font-weight: 500">Note:</span> Google's policy requires that no matter the result, success or failure, you must continue your normal app flow.
+                            This function is used to keep track of background flexible updates to determine how far along/when the update has finished downloading so that you can <a href="install_update.html">Install the Update</a>.
                         </p>
                     </div>
                 </div>
@@ -259,11 +255,10 @@
                         <span class="badge badge-primary">1</span>
                         <div class="info">
                             <p class="content">
-                                <b>On Success</b>
+                                <b>On Install Status Update</b>
                             </p>
                             <p class="content">
-                                A delegate that will be called once the user has completed the review process.
-                                The library does not indicate whether the user reviewed or not, or even whether the review dialog was shown.
+                                A delegate that will continually be called during a flexible update. The delegate will be called with a <a href="install_state.html">Install State</a> struct for you to handle appropriately.
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 You can simply click and drag this pin to create a custom event.
@@ -271,24 +266,7 @@
                         </div>
                     </div>
                 </div>
-                <div style="padding-top: 30px">
-                    <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <span class="badge badge-primary">2</span>
-                        <div class="info">
-                            <p class="content">
-                                <b>On Failure</b>
-                            </p>
-                            <p class="content">
-                                A delegate that will be called if there is an error attempting to launch the review flow.
-                                The delegate will produce an <a href="review_error.html">Review Error</a> for the developer to handle appropriately.
-                            </p>
-                            <p class="content" style="margin-bottom: 0rem;">
-                                You can simply click and drag this pin to create a custom event.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div style="margin-bottom: 300px">
+                <div style="margin-bottom: 500px">
                 </div>
             </main>
         </div>
