--- a/plugins/google-play-services/in-app-updates/install_state.html
+++ b/plugins/google-play-services/in-app-updates/install_state.html
@@ -238,15 +238,16 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            The ReviewError struct is designed to simplify handling any errors encountered when attempting to launch an in-app review.
+                            The InstallState struct is designed to mimic the object defined within the Google Play Core library almost exactly.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The struct contains a general error code that the google play library categories the issue as and a message describing what may have happened.
+                            The struct contains information about the state of an ongoing flexible installation.
+                            This object is produced when using the <a href="flexible_listener.html">Set Flexible Install Listener</a> blueprint function to report on the state of an ongoing download.
                         </p>
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">FReviewError</h1>
+                    <h1 class="h3 text-white-shadow">FInstallState</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; overflow-x: auto;">
                     <table class="table table-striped table-bordered table-documentation"
@@ -260,18 +261,35 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Code</td>
+                                <td>InstallStatus</td>
                                 <td>
-                                    <a href="enumerations.html">EReviewErrorCode</a>
+                                    <a href="enumerations.html">EInstallStatus</a>
                                 </td>
                                 <td style="min-width: 300px">
-                                    The type of error encountered.
+                                    Returns the status of an install.
                                 </td>
                             </tr>
                             <tr>
-                                <td>Message</td>
+                                <td>BytesDownloaded</td>
+                                <td>int64</td>
+                                <td>Returns the number of bytes downloaded so far.</td>
+                            </tr>
+                            <tr>
+                                <td>TotalBytesToDownload</td>
+                                <td>int64</td>
+                                <td>Returns the total number of bytes to be downloaded for this update.</td>
+                            </tr>
+                            <tr>
+                                <td>InstallErrorCode</td>
+                                <td>
+                                    <a href="enumerations.html">EInstallErrorCode</a>
+                                </td>
+                                <td>Returns the error code for an install, or <span style="font-weight: 500">NO_ERROR</span> if the install is successful or in progress.</td>
+                            </tr>
+                            <tr>
+                                <td>PackageName</td>
                                 <td>FString</td>
-                                <td>A message further describing what the issue might be.</td>
+                                <td>Returns the package name for the app being installed.</td>
                             </tr>
                         </tbody>
                     </table>
