--- a/plugins/google-play-services/in-app-updates/is_update_type_allowed.html
+++ b/plugins/google-play-services/in-app-updates/is_update_type_allowed.html
@@ -236,16 +236,9 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <p class="content">
-                            This is an asynchronous function which launches the in-app review flow.
-                            You must wait until the user has completed the in-app review process before your app continues its normal flow.
-                        </p>
-                        <p class="content">
-                            Once the asynchronous operation has completed, one of two delegates will be called to handle
-                            the success and failure situations.
-                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            <span style="font-weight: 500">Note:</span> Google's policy requires that no matter the result, success or failure, you must continue your normal app flow.
+                            This is a static function which determines the feasability of performing a specific type of Update.
+                            This takes in the same parameters as the <a href="launch_update_request.html">Launch Play Update Request</a> function allowing you to customise your user experience.
                         </p>
                     </div>
                 </div>
@@ -259,14 +252,10 @@
                         <span class="badge badge-primary">1</span>
                         <div class="info">
                             <p class="content">
-                                <b>On Success</b>
-                            </p>
-                            <p class="content">
-                                A delegate that will be called once the user has completed the review process.
-                                The library does not indicate whether the user reviewed or not, or even whether the review dialog was shown.
+                                <b>Update Type</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                You can simply click and drag this pin to create a custom event.
+                                This represents the <a href="enumerations.html">Type of Update</a>.
                             </p>
                         </div>
                     </div>
@@ -276,14 +265,13 @@
                         <span class="badge badge-primary">2</span>
                         <div class="info">
                             <p class="content">
-                                <b>On Failure</b>
+                                <b>Allow Asset Pack Deletion</b>
                             </p>
                             <p class="content">
-                                A delegate that will be called if there is an error attempting to launch the review flow.
-                                The delegate will produce an <a href="review_error.html">Review Error</a> for the developer to handle appropriately.
+                                Allows the update to delete Asset Packs from the app's storage before attempting to update the app, in case of insufficient storage.
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                You can simply click and drag this pin to create a custom event.
+                                <span style="font-weight: 500">NOTE:</span> Google suggests that if you can perform an update with this value set to false, you should.
                             </p>
                         </div>
                     </div>
