--- a/plugins/google-play-services/in-app-updates/enumerations.html
+++ b/plugins/google-play-services/in-app-updates/enumerations.html
@@ -464,7 +464,7 @@
                     </table>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px; margin-bottom: 20px; margin-top: 20px; margin-right: 20px;">
-                    <h1 class="h3 text-white-shadow">EUpdateResult</h1>
+                    <h1 class="h3 text-white-shadow">EPlayUpdateResult</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px; overflow-x: auto;">
                     <table class="table table-striped table-bordered table-documentation"
